--- a/composer.json
+++ b/composer.json
@@ -8,91 +8,75 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^8.0.2",
         "algolia/algoliasearch-client-php": "^2.4",
-        "awssat/laravel-visits": "^2.2",
-        "barryvdh/laravel-cors": "^0.11.4",
-        "barryvdh/laravel-dompdf": "^0.8.5",
         "code4mk/lara-head": "dev-master",
-        "cviebrock/eloquent-sluggable": "^6.0",
+        "cviebrock/eloquent-sluggable": "^9.0",
         "doctrine/dbal": "^2.9",
-        "fideloper/proxy": "^4.0",
         "geoip2/geoip2": "~2.0",
         "intervention/image": "^2.4",
-        "julienbourdeau/route-usage": "^0.2.0",
-        "kitetail/zttp": "^0.6.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^9.11",
         "laravel/helpers": "^1.1",
-        "laravel/horizon": "^3.2",
-        "laravel/passport": "^7.3",
-        "laravel/scout": "^7.2",
-        "laravel/socialite": "^4.2",
-        "laravel/tinker": "^1.0",
+        "laravel/horizon": "^5.9",
+        "laravel/passport": "^10.4",
+        "laravel/sanctum": "^2.14.1",
+        "laravel/telescope": "^4.9",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.0",
+        "nesbot/carbon": "^2.58",
         "overtrue/laravel-follow": "^1.1",
-        "owen-it/laravel-auditing": "^9.3",
+        "owen-it/laravel-auditing": "^13.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.0",
-        "qoraiche/laravel-mail-editor": "^1.2",
-        "spatie/laravel-activitylog": "^3.14",
-        "spatie/laravel-backup": "^6.2",
-        "spatie/laravel-cookie-consent": "^2.8",
-        "spatie/laravel-medialibrary": "^7.0.0",
+        "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-newsletter": "^4.7",
-        "spatie/laravel-permission": "^3.0",
-        "spatie/laravel-searchable": "^1.3",
-        "tightenco/ziggy": "^0.8.1",
-        "waavi/sanitizer": "~1.0",
+        "spatie/laravel-permission": "^5.5",
+        "tightenco/ziggy": "^1.4.6",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.6",
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "laravel/telescope": "^2.0",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "react/dns": "^0.4.19"
+        "react/dns": "^0.4.19",
+        "aws/aws-sdk-php": "^3.198.1",
+        "guzzlehttp/guzzle": "^7.2",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-ftp": "^3.0",
+        "league/flysystem-sftp-v3": "^3.0",
+        "orchestra/testbench-core": "^7.1",
+        "pda/pheanstalk": "^4.0",
+        "phpstan/phpstan": "^1.4.7",
+        "predis/predis": "^1.1.9",
+        "symfony/cache": "^6.0",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
-    "config": {
-        "platform": {
-            "ext-pcntl": "7.2",
-            "ext-posix": "7.2"
-        },
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-                "laravel/telescope"
-            ]
-        }
-    },
+   
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -100,5 +84,17 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
