--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.10.1",
-        "axios": "^0.19.2",
+        "axios": "^0.27.2",
         "bootstrap": "^4.5.0",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.27.9",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0.2",
         "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.4",
-        "lodash": "^4.17.15",
+        "laravel-mix": "^6.0.43",
+        "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1",
-        "resolve-url-loader": "^3.1.1",
+        "react-scripts": "^5.0.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.26.9",
         "sass-loader": "^8.0.2",
         "terser": "^4.8.0",
@@ -31,7 +31,7 @@
         "vue-loader": "^15.9.3",
         "vue-router": "^3.3.4",
         "vue-template-compiler": "^2.6.11",
-        "webpack": "^4.43.0",
+        "webpack": "^5.72.0",
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
@@ -42,7 +42,7 @@
         "laravel-echo": "^1.8.0",
         "laravel-vue-pagination": "^2.3.1",
         "material-icons": "^0.3.1",
-        "moment": "^2.27.0",
+        "moment": "^2.29.3",
         "prop-types": "^15.7.2",
         "pusher-js": "^6.0.3",
         "react-form-input-validation": "^2.0.3",
