--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kazoutech
 DB_USERNAME=root
-DB_PASSWORD=kazoutech2019
+DB_PASSWORD=Tafeng@20
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
