--- a/package.json
+++ b/package.json
@@ -2,81 +2,81 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.10.1",
+        "@babel/preset-react": "^7.17.12",
         "axios": "^0.27.2",
-        "bootstrap": "^4.5.0",
-        "browser-sync": "^2.27.9",
-        "browser-sync-webpack-plugin": "^2.2.2",
-        "cross-env": "^7.0.2",
-        "jquery": "^3.5.1",
+        "bootstrap": "^4.6.1",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "cross-env": "^7.0.3",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-scripts": "^5.0.1",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.26.9",
+        "sass": "^1.52.1",
         "sass-loader": "^8.0.2",
         "terser": "^4.8.0",
-        "vue": "^2.6.11",
-        "vue-loader": "^15.9.3",
-        "vue-router": "^3.3.4",
-        "vue-template-compiler": "^2.6.11",
-        "webpack": "^5.72.0",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-router": "^3.5.4",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^5.72.1",
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
-        "animate.css": "^4.1.0",
-        "babel-loader": "^8.1.0",
+        "animate.css": "^4.1.1",
+        "babel-loader": "^8.2.5",
         "babel-runtime": "^6.26.0",
         "es6-promise": "^4.2.8",
-        "laravel-echo": "^1.8.0",
+        "laravel-echo": "^1.11.7",
         "laravel-vue-pagination": "^2.3.1",
         "material-icons": "^0.3.1",
         "moment": "^2.29.3",
-        "prop-types": "^15.7.2",
+        "prop-types": "^15.8.1",
         "pusher-js": "^6.0.3",
-        "react-form-input-validation": "^2.0.3",
+        "react-form-input-validation": "^2.0.5",
         "react-helmet": "^6.1.0",
         "react-js-pagination": "^3.0.3",
         "react-lazyload": "^2.6.9",
-        "react-loading-skeleton": "^2.1.1",
+        "react-loading-skeleton": "^2.2.0",
         "react-progress-2": "^4.4.3",
         "react-quill": "^1.3.5",
         "react-read-more-less": "^0.1.6",
-        "react-redux": "^7.2.0",
-        "react-router-dom": "^5.2.0",
-        "react-virtualized": "^9.21.2",
-        "reactstrap": "^8.5.1",
-        "redux": "^4.0.5",
-        "redux-form": "^8.3.6",
-        "redux-thunk": "^2.3.0",
+        "react-redux": "^7.2.8",
+        "react-router-dom": "^5.3.3",
+        "react-virtualized": "^9.22.3",
+        "reactstrap": "^8.10.1",
+        "redux": "^4.2.0",
+        "redux-form": "^8.3.8",
+        "redux-thunk": "^2.4.1",
         "select2": "^4.0.13",
-        "sweetalert2": "^9.15.2",
-        "tiptap": "^1.27.1",
-        "vee-validate": "^3.3.6",
+        "sweetalert2": "^9.17.2",
+        "tiptap": "^1.32.2",
+        "vee-validate": "^3.4.14",
         "vform": "^1.0.1",
         "vue-infinite-loading": "^2.4.5",
         "vue-progressbar": "^0.7.5",
         "vue-quill-editor": "^3.0.6",
-        "vue-rate": "^2.4.0",
+        "vue-rate": "^2.5.0",
         "vue-recaptcha": "^1.3.0",
-        "vue-resource": "^1.5.1",
-        "vue-select": "^3.10.5",
+        "vue-resource": "^1.5.3",
+        "vue-select": "^3.18.3",
         "vue-the-mask": "^0.11.1",
-        "vue2-editor": "^2.10.2",
-        "vue2-filters": "^0.11.0",
-        "vue2-storage": "^5.0.0",
-        "vuex": "^3.4.0",
-        "yimo-vue-editor": "^1.1.5"
+        "vue2-editor": "^2.10.3",
+        "vue2-filters": "^0.11.1",
+        "vue2-storage": "^5.1.0",
+        "vuex": "^3.6.2",
+        "yimo-vue-editor": "^1.1.7"
     }
 }
